Update App icon, Splash Screen, App ID and App name

--- a/frontend/capacitor.config.json
+++ b/frontend/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.example.medicalapp",
-  "appName": "frontend",
+  "appId": "com.example.aramedic",
+  "appName": "Aramedic",
   "webDir": "dist"
 }
