--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@capacitor/android": "^7.0.1",
     "@capacitor/core": "^7.0.1",
+    "@capacitor/dialog": "^7.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
