--- a/frontend/capacitor.config.json
+++ b/frontend/capacitor.config.json
@@ -1,5 +1,8 @@
 {
   "appId": "com.example.aramedic",
   "appName": "Aramedic",
-  "webDir": "dist"
+  "webDir": "dist",
+  "android": {
+    "allowMixedContent": true
+  }
 }
