--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.810.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -18,6 +19,7 @@
     "hospital_app": "file:",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
+    "pdfkit": "^0.17.1",
     "socket.io": "^4.8.1"
   }
 }
