--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
-    "reset-css": "^5.0.2"
+    "reset-css": "^5.0.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.0.1",
